--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.1.0",
+    "dotenv": "^8.2.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.2"
   }
